# zed-hlsl-ls

./: Cargo.toml  extension.toml  readme.md
src/: lib.rs
