[package]
name = "zed-hlsl-ls"
description = "HLSL (Shader Language Server)"
version = "0.1.0"
edition = "2024"
authors = [
  "Igor Dreher <igor.dreher@gmail.com>",
  "Christian Howe <christianjacobhowe@gmail.com>",
]
repository = "https://github.com/igordreher/zed-hlsl"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
