[package]
name = "zed-hlsl-ls"
description = "A language server for HLSL using Shader Language Server"
version = "0.1.0"
authors = ["Christian Howe <christianjacobhowe@gmail.com>"]
repository = "https://github.com/cjhowe-us/zed-hlsl-ls"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
